--- a/index.html
+++ b/index.html
@@ -3,14 +3,45 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon"
-    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⟩_</text></svg>" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ShekharKashyap.dev | Backend Engineer</title>
+
+  <!-- Primary SEO -->
+  <title>Shekhar Kashyap | Backend Developer | NestJS & GenAI Engineer</title>
+
+  <meta name="description" content="Shekhar Kashyap is a Backend Developer specializing in NestJS, Node.js, MongoDB, and GenAI systems. Explore projects, blogs on system design, backend architecture, and AI development." />
+
+  <meta name="keywords" content="Shekhar Kashyap, Backend Developer, NestJS Developer, Node.js Developer, GenAI Engineer, MongoDB, System Design, AI Developer India" />
+
+  <meta name="author" content="Shekhar Kashyap" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://shekharkashyap.com/" />
+
+  <!-- Open Graph (LinkedIn, WhatsApp, Facebook) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Shekhar Kashyap | Backend & GenAI Engineer" />
+  <meta property="og:description" content="Backend Developer building scalable APIs, AI-powered systems, and system design projects. Explore my portfolio and technical blogs." />
+  <meta property="og:url" content="https://shekharkashyap.com/" />
+  <meta property="og:image" content="https://shekharkashyap.com/og-image.png" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Shekhar Kashyap | Backend & GenAI Engineer" />
+  <meta name="twitter:description" content="Backend Developer building scalable APIs and AI systems using NestJS, Node.js & GenAI." />
+  <meta name="twitter:image" content="https://shekharkashyap.com/og-image.png" />
+
+  <!-- Google Verification -->
+  <meta name="google-site-verification" content="yBRhtPARTWL16nHEZtXVrGoBtkSgiBlO8IO13vdkdok" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
-  <meta name="google-site-verification" content="yBRhtPARTWL16nHEZtXVrGoBtkSgiBlO8IO13vdkdok" />
+
+  <!-- Favicon -->
+  <link rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>⟩_</text></svg>" />
 </head>
 
 <body>
